--- a/src/App.scss
+++ b/src/App.scss
@@ -1,27 +1,50 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
+body{
+  padding: 0;
+  margin: 0;
+  color: #111;
+}
+
+
 @mixin button{
-  color: #fff ;
-	text-transform: uppercase;
-	background: #60a3bc;
-	padding: 10px;
-  width: 100px;
-	border-radius: 50px;
-	border: none;
-  margin-left: 10px;
+  color: #009879;
+  text-transform: uppercase;
+  background: #fff;
+  padding: 0;
+  width: 130px;
+  border-radius: 4px;
+  border: none;
+  margin: 0;
   cursor: pointer;
+  height: 46px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
 }
 
 label{
-  margin-right: 5px;
-  font-size: 20px;
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 6px;
+  color: #fff;
 }
 
 input{
-  height: 30px;
-  border-radius: 5px;
+  width: 100%;
+  display: inline-block;
+  border: 1px solid #009879;
+  height: 46px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 16px;
+  &:hover, &:focus{
+    outline: none;
+  }
 }
 
 .disabled{
@@ -29,30 +52,19 @@ input{
   pointer-events: none;
 }
 
-hr{
-  margin: 50px 0 20px 0;
-}
-
-img{
-  height: 20px;
-  cursor: pointer;
-  padding: 6px 12px;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 0 5px 0 5px;
-}
-
 .closeModal-btn{
   @include button;
 	background: #ffffff;
-  border: 1px solid black;
-  color: black !important;
-  font-size: 15px
+  border: 1px solid #000;
+  color: #000 !important;
+  font-size: 15px;
+  margin: 6px;
 }
 
 .delete-btn{
   @include button;
 	background: #c93d3d;
+  color: #fff;
 }
 
 .submit-btn{
@@ -69,63 +81,140 @@ img{
   top: 0;
   bottom: 0;
   margin: auto;
-}
-.delete-modal{
-  border: 1px solid;
-  padding: 20px;
-  width: 400px;
-  border-radius: 15px;
-  margin: auto;
-  background: #fff;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  height: 110px;
-}
-
-.styled-table {
-    border-collapse: collapse;
+  .delete-modal{
+    border: 1px solid #444;
+    padding: 20px;
+    width: 450px;
+    border-radius: 15px;
     margin: auto;
-    font-size: 1em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-}
-
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
-
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
-.table-container{
-  margin-top: 30px;
+    background: #fff;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 170px;
+    text-align: center;
+  }
 }
 
 .error{
-  color: red;
+  color: #ff0000;
   font-size: 13px;
 }
 
-.no-data{
-  text-align: center;
+.top-sec {
+  width: 100%;
+  display: inline-block;
+  background-color: #009879;
+  padding: 40px;
+  .top-sec-inner {
+    width: 700px;
+    margin: 0 auto;
+    background-color: #07aa89;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px #028a6f;
+    h2 {
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 20px;
+      margin: 0 0 20px;
+      text-align: center;
+    }
+    .field-rep {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-align: left;
+      input {
+        width: calc(100% - 130px);
+        margin-right: 15px;
+      }       
+    }
+  }
+}
+.table-container{
+  margin: 50px 0;
+  width: 100%;
+  display: inline-block;
+  .table-container-inner{
+    width: 700px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 0;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px #e3e3e3;
+    overflow: hidden;
+    .friend-list {
+      width: 100%;
+      display: inline-block;
+      border-bottom: 2px solid #009879;
+      padding: 40px;
+      background-color: #009879;
+      h2 {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 20px;
+        margin: 0 0 20px;
+        text-align: center;
+      }
+    }
+    .cus-table{
+      width: 100%;
+      display: inline-block;
+      padding: 40px;
+      background-color: #fff;
+      .styled-table{
+        width: 100%;
+        border-collapse: collapse;
+        margin: auto;
+        font-size: 16px;
+        font-family: sans-serif;
+        background-color: #fff;
+        border: 2px solid #f1f1f1;
+        thead{
+          tr {
+            background-color: #009879;
+            color: #fff;
+            text-align: left;
+          }
+        }
+        th, td{
+          padding: 18px 20px;
+          font-size: 14px;
+          text-align: center;
+        }
+        td{
+          font-weight: 600;
+          color: #444;
+          padding: 12px 20px;
+          img{
+            height: 30px;
+            cursor: pointer;
+            padding: 6px 12px;
+            border: 1px solid #444;
+            border-radius: 5px;
+            margin: 0 5px 0 5px;
+          }
+          &.no-data{
+            text-align: center;
+            padding: 25px 20px;
+          }
+        }
+        tbody{
+          tr {
+            border-bottom: 1px solid #dddddd;
+            &:nth-of-type(even) {
+              background-color: #f3f3f3;
+            }
+            &:last-of-type {
+              border-bottom: 2px solid #f1f1f1;
+            }
+          }
+        }
+      }
+    }
+  }
 }
