--- a/src/App.scss
+++ b/src/App.scss
@@ -240,4 +240,13 @@ input{
     width: 90px !important;
     height: 28px !important;
   }
+  .total{
+    display: flex;
+    flex: auto;
+  }
+}
+
+input[type="search"]::-webkit-search-decoration:hover,
+input[type="search"]::-webkit-search-cancel-button:hover { 
+    cursor:pointer; 
 }
